// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a value 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
>
  <div
    className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      aria-label="Choose time"
      aria-readonly={true}
      autoFocus={false}
      className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      disabled={false}
      id="mui-3"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`is disabled 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
>
  <div
    className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled Mui-error MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      aria-label="Choose time"
      aria-readonly={true}
      autoFocus={false}
      className="MuiInput-input MuiInputBase-input Mui-disabled css-1x51dt5-MuiInputBase-input-MuiInput-input"
      disabled={true}
      id="mui-7"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`is on 24h 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
>
  <div
    className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      aria-label="Choose time"
      aria-readonly={true}
      autoFocus={false}
      className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      disabled={false}
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders correctly props object 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
>
  <div
    className="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl css-1480iag-MuiInputBase-root-MuiInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      aria-label="Choose time"
      aria-readonly={true}
      autoFocus={false}
      className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      disabled={false}
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;
